Intro: fix success bannner width
It was too narrow when the progress banner is absolutely positioned, and
this forming to the same width as the container it's within.

--- a/packages/thicket-intro/src/App/GifCreator/GifCreator.css
+++ b/packages/thicket-intro/src/App/GifCreator/GifCreator.css
@@ -10,5 +10,6 @@
   margin: 0 auto;
   padding: 1em;
   max-width: 30em;
+  width: 100%;
   position: relative;
 }
